--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
           <artifactId>storm</artifactId>
           <version>0.7.1</version>
        </dependency>
+      <dependency>
+          <groupId>jnetpcap</groupId>
+          <artifactId>jnetpcap</artifactId>
+      </dependency>
 
   </dependencies>
 
